--- a/index.html
+++ b/index.html
@@ -17,42 +17,43 @@
             <div class="menu__cell">
                 <div class="search">
                     <form action="" method="GET" id="modal-search">
-                        <button class="btn__icon btn">
-                            <img src="./images/search_button.png" alt="Иконка поиска">
+                        <button class="btn">
+                            <img src="./images/search_button.png" class='btn__img' alt="Иконка поиска">
                         </button>
                         <input type="text" name='search-btn' class="input__field" placeholder="Поиск по сайту" />
                     </form>
                 </div>
                 <div class="catalog">
-                    <button class="catalog__submenu link">
-                        Каталог товаров <img src="./images/plus.png" alt="icon of cart">
-                    </button>
-                    <div class="submenu">
-                        <ul class="submenu__items">
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Виртуальная реальность</a>
-                            </li>
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Моноподы для селфи</a>
-                            </li>
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Экшн-камеры</a>
-                            </li>
-                        </ul>
-                        <ul class="submenu__items">
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Фитнес-браслеты</a>
-                            </li>
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Умные часы</a>
-                            </li>
-                        </ul>
-                        <ul class="submenu__items">
-                            <li class="submenu__item">
-                                <a href="#" class="submenu__link">Квадрокоптеры</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <span class="catalog__submenu">
+                        <span class="link">Каталог товаров</span>
+                        <img src="./images/plus.png" alt="icon of cart">
+                        <div class="submenu">
+                            <ul class="submenu__items">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Виртуальная реальность</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Моноподы для селфи</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Экшн-камеры</a>
+                                </li>
+                            </ul>
+                            <ul class="submenu__items">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Фитнес-браслеты</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Умные часы</a>
+                                </li>
+                            </ul>
+                            <ul class="submenu__items">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__link">Квадрокоптеры</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </span>
                 </div>
             </div>
             <div class="menu__cell">
@@ -96,107 +97,107 @@
         </div>
         <div class="slider">
             <div class="slider__wrapper">
-                <div class="slider__img">
-                    <img src='./images/slider-1.png' alt="Изображение слайдера">
-                </div>
-            </div>
-            <div class="slider__wrapper">
                 <div class="slider__item">
-                    <div class="slider__counter">01</div>
-                    <h1 class="slider__title">Делай селфи,<br> как Бен Стиллер!</h1>
-                    <p class="slider__text">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь
-                        (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-                </div>
-                <div class="slider__details">
-                    <div class="slider__link">
-                        <a href="#" class="link">Подробнее</a>
+                    <div class="slider__cell">
+                        <div class="slider__img">
+                            <img src='./images/slider-1.png' alt="Изображение слайдера">
+                        </div>
                     </div>
-
-                </div>
-                <div class="slider__feature">
-                    <div class="feature">
-                        <h2 class="feature__title"> 8,5 м</h2>
-                        <p class="feature__text">Длинна палки</p>
+                    <div class="slider__cell">
+                        <div class="slider__text">
+                            <h1 class="slider__title">Делай селфи,<br> как Бен Стиллер!</h1>
+                            <p class="slider__paragragh">Самая длинная палка для селфи доступна в нашем
+                                магазине.<br>Восемь
+                                (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+                        </div>
+                        <div class="slider__details">
+                            <div class="slider__link">
+                                <a href="#" class="link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="slider__feature">
+                            <div class="feature">
+                                <h2 class="feature__title"> 8,5 м</h2>
+                                <p class="feature__text">Длинна палки</p>
+                            </div>
+                            <div class="feature">
+                                <h2 class="feature__title"> 5 кг</h2>
+                                <p class="feature__text">Вес палки</p>
+                            </div>
+                            <div class="feature">
+                                <h2 class="feature__title"> Карбон</h2>
+                                <p class="feature__text">Материал</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="feature">
-                        <h2 class="feature__title"> 5 кг</h2>
-                        <p class="feature__text">Вес палки</p>
-                    </div>
-                    <div class="feature">
-                        <h2 class="feature__title"> Карбон</h2>
-                        <p class="feature__text">Материал</p>
-                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="slider__wrapper">
-                <div class="slider__img">
-                    <img src='./images/slider-2.png' alt="Изображение слайдера">
-                </div>
-            </div>
-            <div class="slider__wrapper">
                 <div class="slider__item">
-                    <div class="slider__counter">02</div>
-                    <h1 class="slider__title">Худеем<br> правильно!</h1>
-                    <p class="slider__text">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать
-                        занятия и соблюдать диету.</p>
-                </div>
-                <div class="slider__details">
-                    <div class="slider__link">
-                        <a href="#" class="link">Подробнее</a>
+                    <div class="slider__cell">
+                        <div class="slider__img">
+                            <img src='./images/slider-2.png' alt="Изображение слайдера">
+                        </div>
                     </div>
-
-                </div>
-                <div class="slider__feature">
-                    <div class="feature">
-                        <h2 class="feature__title">48 часов</h2>
-                        <p class="feature__text">Без подзараядки</p>
+                    <div class="slider__cell">
+                        <div class="slider__text">
+                            <h1 class="slider__title">Худеем<br> правильно!</h1>
+                            <p class="slider__paragragh">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не
+                                пропускать
+                                занятия и соблюдать диету.</p>
+                        </div>
+                        <div class="slider__details">
+                            <div class="slider__link">
+                                <a href="#" class="link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="slider__feature">
+                            <div class="feature">
+                                <h2 class="feature__title"> 48 часов</h2>
+                                <p class="feature__text">Без подзараядки</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div class="slider__wrapper">
-                <div class="slider__img">
-                    <img src='./images/slider-3.png' alt="Изображение слайдера">
-                </div>
-            </div>
-            <div class="slider__wrapper">
                 <div class="slider__item">
-                    <div class="slider__counter">03</div>
-                    <h1 class="slider__title">Порхает как бабочка,<br>жалит как пчела!</h1>
-                    <p class="slider__text">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером,
-                        замаскированным под стандартную камеру.</p>
+                    <div class="slider__cell">
+                        <div class="slider__img">
+                            <img src='./images/slider-3.png' alt="Изображение слайдера">
+                        </div>
+                    </div>
+                    <div class="slider__cell">
+                        <div class="slider__text">
+                            <h1 class="slider__title">Порхает как бабочка,<br>жалит как пчела!</h1>
+                            <p class="slider__paragragh">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным
+                                лазером,
+                                замаскированным под стандартную камеру.</p>
+                        </div>
+                        <div class="slider__details">
+                            <div class="slider__link">
+                                <a href="#" class="link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="slider__feature">
+                            <div class="feature">
+                                <h2 class="feature__title"> 800 м</h2>
+                                <p class="feature__text">Дальность полета</p>
+                            </div>
+                            <div class="feature">
+                                <h2 class="feature__title"> 50 м</h2>
+                                <p class="feature__text">Радиус поражения</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="slider__details">
-                    <div class="slider__link">
-                        <a href="#" class="link">Подробнее</a>
-                    </div>
-
-                </div>
-                <div class="slider__feature">
-                    <div class="feature">
-                        <h2 class="feature__title"> 800 м</h2>
-                        <p class="feature__text">Дальность полета</p>
-                    </div>
-                    <div class="feature">
-                        <h2 class="feature__title"> 50 метром</h2>
-                        <p class="feature__text">Радиус поражения</p>
-                    </div>
-
+                <div class="slider__dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
-        </div>
-        <div class="slider__dots">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
         </div>
     </div>
     <div class="popular container">
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-1.png" class="img__centre" alt="Изображение виртуальной реальности">
                 </div>
@@ -206,7 +207,7 @@
             </a>
         </div>
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-2.png" class="img__centre" alt="Изображение монопода для селфи">
                 </div>
@@ -216,7 +217,7 @@
             </a>
         </div>
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-3.png" class="img__centre" alt="Изображение экшн-камеры">
                 </div>
@@ -226,7 +227,7 @@
             </a>
         </div>
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-4.png" class="img__centre" alt="Изображение фитнес-браслета">
                 </div>
@@ -236,7 +237,7 @@
             </a>
         </div>
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-5.png" class="img__centre" alt="Изображение умных часов">
                 </div>
@@ -246,7 +247,7 @@
             </a>
         </div>
         <div class="popular__cell">
-            <a href="#">
+            <a href="#" class="popular__product">
                 <div class="popular__img">
                     <img src="./images/popular-6.png" class="img__centre" alt="Изображение квадрокоптера">
                 </div>
@@ -255,56 +256,48 @@
                 </div>
             </a>
         </div>
-
-
     </div>
     <div class="tab">
         <div class="tab__wrapper container">
-            <div class="tab__button">
-                <button class="tab__links" onclick="service(event, 'delivery')" id="defaultOpen">
-                    <div class="link">Доставка</div>
-                </button>
-                <button class="tab__links" onclick="service(event, 'guarantee')">
-                    <div class="link">Гарантия</div>
-                </button>
-                <button class="tab__links" onclick="service(event, 'credit')">
-                    <div class="link">Кредит</div>
-                </button>
+            <div class="tab__btn" id="tab__btns">
+                <button class="tab__divider" onclick="service(event, 'delivery')" id="defaultOpen">Доставка</button>
+                <button class="tab__divider" onclick="service(event, 'guarantee')">Гарантия</button>
+                <button class="tab__divider" onclick="service(event, 'credit')">Кредит</button>
             </div>
             <div class="tab__content">
-                <div id="delivery" class="content _active">
-                    <div class="tab__content_text">
-                        <h3 class="content__text_title">Доставка</h3>
-                        <p class="content__text_paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду
-                            совершенно
-                            бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                <div id="delivery" class="tab__section">
+                    <div class="tab__text">
+                        <h3 class="tab__title">Доставка</h3>
+                        <p class="tab__paragraph">Мы с удовольствием доставим ваш товар прямо к вашему<br>
+                            подъезду совершенно бесплатно! Ведь мы неплохо<br> заработаем, поднимая его на ваш этаж.</p>
                     </div>
-                    <div class="tab__content_img">
+                    <div class="tab__img">
                         <img src="./images/tabs-1.png" alt="Изображение для блока доставки товара">
                     </div>
                 </div>
-                <div id="guarantee" class="content">
-                    <div class="tab__content_text">
-                        <h3 class="content__text_title">Гарантия</h3>
-                        <p class="content__text_paragraph">Если из-за возгорания купленного у нас товара у вас
+                <div id="guarantee" class="tab__section">
+                    <div class="tab__text">
+                        <h3 class="tab__title">Гарантия</h3>
+                        <p class="tab__paragraph">Если из-за возгорания купленного у нас товара у вас
                             сгорит<br>
                             дом — не переживайте, мы выдадим
                             вам
                             новый.<br>Товар,
                             не дом, конечно же.</p>
                     </div>
-                    <div class="tab__content_img">
+                    <div class="tab__img">
                         <img src="./images/tabs-2.png" alt="Изображение для блока гарантии">
                     </div>
                 </div>
-                <div id="credit" class="content">
-                    <div class="tab__content_text">
-                        <h3 class="content__text_title">Кредит</h3>
-                        <p class="content__text_paragraph">Залезть в долговую яму стало проще! Кредитные консультанты
-                            подберут для
-                            вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется</p>
+                <div id="credit" class="tab__section">
+                    <div class="tab__text">
+                        <h3 class="tab__title">Кредит</h3>
+                        <p class="tab__paragraph">Залезть в долговую яму стало проще! Кредитные<br>
+                            консультанты
+                            подберут для вас наиболее выгодные<br> условия кредита. Выгодные для нашего банка,
+                            разумеется</p>
                     </div>
-                    <div class="tab__content_img">
+                    <div class="tab__img">
                         <img src="./images/tabs-3.png" alt="Изображение для блока кредит">
                     </div>
                 </div>
