--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         </div>
                     </div>
                     <div class="slider__cell">
+                        <div class="slider__counter">01</div>
                         <div class="slider__text">
                             <h1 class="slider__title">Делай селфи,<br> как Бен Стиллер!</h1>
                             <p class="slider__paragragh">Самая длинная палка для селфи доступна в нашем
@@ -138,6 +139,7 @@
                         </div>
                     </div>
                     <div class="slider__cell">
+                        <div class="slider__counter">02</div>
                         <div class="slider__text">
                             <h1 class="slider__title">Худеем<br> правильно!</h1>
                             <p class="slider__paragragh">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не
@@ -164,6 +166,7 @@
                         </div>
                     </div>
                     <div class="slider__cell">
+                        <div class="slider__counter">03</div>
                         <div class="slider__text">
                             <h1 class="slider__title">Порхает как бабочка,<br>жалит как пчела!</h1>
                             <p class="slider__paragragh">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным
